--- a/app/views/credit_cards/debit.html.erb
+++ b/app/views/credit_cards/debit.html.erb
@@ -1,2 +1,5 @@
 <h1>CreditCards#debit</h1>
 <p>Find me in app/views/credit_cards/debit.html.erb</p>
+<% (0..5).each do |i| %>
+<%= "#{i}, " %>
+<% end %>
