--- a/app/views/credit_cards/open.html.erb
+++ b/app/views/credit_cards/open.html.erb
@@ -1,3 +1,9 @@
+<head>
+	<title>lMzdxxxx</title>
+</head>
 <h1>CreditCards#open</h1>
+
 <p>Find me in app/views/credit_cards/open.html.erb</p>
+
 <h1><%= Time.now %></h1>
+<%= render "footer" %>
