--- a/app/views/credit_cards/open.html.erb
+++ b/app/views/credit_cards/open.html.erb
@@ -1,6 +1,7 @@
 <head>
-	<title>lMzdxxxx</title>
+	<title></title>
 </head>
+<% provide(:title,"openpage") %>
 <h1>CreditCards#open</h1>
 
 <p>Find me in app/views/credit_cards/open.html.erb</p>
